objects/Municipality__c.object
<CustomObject>
    <fields>
        <fullName>Accel_Location_Revenue_Avg_12_Weeks__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Municipality_Accel_Avg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accel Location Revenue Avg (12 Weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Age_Restriction__c</fullName>
        <label>Age Restriction</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alcohol_Pouring_License_Requirement__c</fullName>
        <label>Alcohol Pouring License Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alert_Account_Owners__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alert Account Owners of Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alert_Relationship_Managers_of_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will send an email to the relationship manager associated to the child account(s) of this record.</description>
        <inlineHelpText>Will send an email to the relationship manager associated to the child account(s) of this record.</inlineHelpText>
        <label>Alert Relationship Managers of Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alert_SalesOps_of_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alert SalesOps of Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allows_6th_VGT__c</fullName>
        <label>Allows 6th VGT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allows_Gaming__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allows Gaming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allows_Gaming_in_Non_Trad_Establishments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allows Gaming in NonTraditional Est.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allows_Same_Owner_Operator__c</fullName>
        <label>Allows Same Owner Operator?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Played__c</fullName>
        <label>Amount Played</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Won__c</fullName>
        <label>Amount Won</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_of_games_location__c</fullName>
        <label>Amount of games/location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Sticker_Fee_per_Machine__c</fullName>
        <label>Annual Sticker Fee per Machine</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_HDP_for_Accel_Locations__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Municipality_Accel_Avg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average HPD for Accel Locations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_HPD_For_Municipality__c</fullName>
        <description>Pull from Hold Per Day Total Object.</description>
        <formula>Hold_Per_Day_Total__r.HPD_Municipality_Revenue_Avg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pull from Hold Per Day Total Object.</inlineHelpText>
        <label>Average HPD For Municipality</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Background_check_on_applicants__c</fullName>
        <label>Background check on applicants?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bar_Restaurant_Count__c</fullName>
        <description>Counts all Live locations existing in Salesforce for accounts of type Accel Account or Competitor Account. Uses the existence of a most recent HPD Record (within 75 days), Looks for an Accel Establishment Type of &apos;Bar&apos; or &apos;Restaurant&apos; (Maintained by DLRS)</description>
        <inlineHelpText>Counts all Live locations existing in Salesforce for accounts of type Accel Account or Competitor Account. Uses the existence of a most recent HPD Record (within 75 days), Looks for an Accel Establishment Type of &apos;Bar&apos; or &apos;Restaurant&apos;</inlineHelpText>
        <label>Bar/Restaurant Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C_Store_Count__c</fullName>
        <description>Counts all Live locations existing in Salesforce for accounts of type Accel Account or Competitor Account. Uses the existence of a most recent HPD Record (within 75 days), Looks for an Accel Establishment Type of &apos;C-Store&apos;  (Maintained by DLRS)</description>
        <inlineHelpText>Counts all Live locations existing in Salesforce for accounts of type Accel Account or Competitor Account. Uses the existence of a most recent HPD Record (within 75 days), Looks for an Accel Establishment Type of &apos;C-Store&apos;</inlineHelpText>
        <label>C-Store Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Casino_Types__c</fullName>
        <label>Casino Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tribal/Native</fullName>
                </value>
                <value>
                    <fullName>Commercial Land</fullName>
                </value>
                <value>
                    <fullName>Commercial River</fullName>
                </value>
                <value>
                    <fullName>Track (Horse/Dog)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_With__c</fullName>
        <label>Confirmed With</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Establishment_Count__c</fullName>
        <description>Counts all Live locations existing in Salesforce for accounts of type Accel Account or Competitor Account. (Maintained by DLRS). Uses the existence of a most recent HPD Record (within 75 days) on the account to ensure it&apos;s live.  ie Account.Most_Recent_Hpd_Within_75_Days.</description>
        <inlineHelpText>Counts all Live locations existing in Salesforce for accounts of type Accel Account or Competitor Account. Uses the existence of a most recent HPD Record (within 75 days) on the account to ensure it&apos;s live.</inlineHelpText>
        <label>Establishment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Establishment_Licensing_Difficulty__c</fullName>
        <label>Establishment Licensing Difficulty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Difficult</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Establishment_Split__c</fullName>
        <label>Establishment Split</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Funds_In_TTM__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Municipality_TTM_Funds_In_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funds In (TTM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funds_in__c</fullName>
        <label>Funds in</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funds_out__c</fullName>
        <label>Funds out</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gaming_Centrally_Linked__c</fullName>
        <label>Gaming Centrally Linked</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gaming_Machines_Certified__c</fullName>
        <label>Gaming Machines Certified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gaming_Parlor_Count__c</fullName>
        <description>Counts all Live locations existing in Salesforce for accounts of type Accel Account or Competitor Account. Uses the existence of a most recent HPD Record (within 75 days), Looks for an Accel Establishment Type of &apos;C-Store&apos; (Maintained by DLRS)</description>
        <inlineHelpText>Counts all Live locations existing in Salesforce for accounts of type Accel Account or Competitor Account. Uses the existence of a most recent HPD Record (within 75 days), Looks for an Accel Establishment Type of &apos;Gaming Parlor&apos;</inlineHelpText>
        <label>Gaming Parlor Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPD_Funds_In_Total_12_Weeks__c</fullName>
        <description>For Accel Accounts, Competitor Accounts, And Discontinued Accounts.</description>
        <formula>Hold_Per_Day_Total__r.HPD_Municipality_Funds_In_Total_12_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funds In (12 Weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_Funds_In_Total_4_Weeks__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Municipality_Funds_In_Total_4_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funds In (4 Weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_Funds_In_Total_8_Weeks__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Municipality_Funds_In_Total_8_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funds In (8 Weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_Funds_Out_TTM__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Municipality_TTM_Funds_Out_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funds Out (TTM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_Funds_out_12_Weeks__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Funds_Out_Total_12_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funds Out (12 Weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_Revenue_Total_12_Weeks__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Municipality_Revenue_Total_12_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue (12 Weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_Revenue_Total_4_Weeks__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Municipality_Revenue_Total_4_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue (4 Weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD_Revenue_Total_8_Weeks__c</fullName>
        <formula>Hold_Per_Day_Total__r.HPD_Municipality_Revenue_Total_8_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue (8 Weeks)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HPD__c</fullName>
        <label>HPD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hold_Per_Day_Total_Daily__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hold Per Day Total (Daily)</label>
        <referenceTo>Hold_Per_Day_Total__c</referenceTo>
        <relationshipLabel>Municipalities (Hold Per Day Total (Daily))</relationshipLabel>
        <relationshipName>Municipalities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hold_Per_Day_Total__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hold Per Day Totals</label>
        <referenceTo>Hold_Per_Day_Total__c</referenceTo>
        <relationshipLabel>Municipalities</relationshipLabel>
        <relationshipName>Municipalities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hometown_Role__c</fullName>
        <label>Home Town Rule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Law_which_legalizes_Gaming_Machines__c</fullName>
        <label>Law which legalizes Gaming Machines</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Liquor_License_Available_Types2__c</fullName>
        <label>Liquor License Available Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Premise</fullName>
                </value>
                <value>
                    <fullName>Consumption Combo</fullName>
                </value>
                <value>
                    <fullName>Ordinance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Liquor_License_Available__c</fullName>
        <label>Liquor License Available</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_License_Required__c</fullName>
        <label>Location License Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_State_License_Annual_Fee__c</fullName>
        <label>Location State License Annual Fee</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Max_Bet__c</fullName>
        <label>Max Bet</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Jackpot_per_Spin__c</fullName>
        <label>Max Jackpot per Spin</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Muncipality_Share__c</fullName>
        <label>Municipality Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Municipal_Restrictions__c</fullName>
        <label>Municipal Restrictions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Municipality_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Municipality Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Municipality_Population__c</fullName>
        <label>Municipality Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Municipality_Type__c</fullName>
        <label>Municipality Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Suburban</fullName>
                </value>
                <value>
                    <fullName>Urban</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Rural</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Municipality_VGT_Allowance_Notes__c</fullName>
        <label>Municipality VGT Allowance Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NTI_Tax_Rate_30__c</fullName>
        <label>NTI Tax Rate 30%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NTI__c</fullName>
        <label>NTI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nbr_of_Accel_locations__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Rollup of Accounts of type Accel Account. Maintained by DLRS</description>
        <inlineHelpText>Rollup of Accounts of type Accel Account.</inlineHelpText>
        <label># of Accel locations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nbr_of_gaming_locations_in_town__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Rollup of Accounts of Record type location. Maintained by DLRS</description>
        <inlineHelpText>Rollup of location accounts</inlineHelpText>
        <label># of gaming locations in town</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Revenue__c</fullName>
        <formula>Amount_Played__c -  Amount_Won__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Wagering_Activity__c</fullName>
        <label>Net Wagering Activity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Next_Municipal_Meeting__c</fullName>
        <label>Next Municipal Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Municipality_Meeting_Info__c</fullName>
        <label>Next Municipality Meeting Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator_License_Required__c</fullName>
        <label>Operator License Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operator_Split__c</fullName>
        <label>Operator Split</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Operator_State_License_Annual_Fee__c</fullName>
        <label>Operator State License Annual Fee</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Operator_State_License_Initial_Fee__c</fullName>
        <label>Operator State License Initial Fee</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Org_URL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Count__c</fullName>
        <formula>Establishment_Count__c -  Bar_Restaurant_Count__c -  Gaming_Parlor_Count__c -  Truck_Stop_Count__c -  C_Store_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Counts All Other Establishment Types</inlineHelpText>
        <label>Other Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Gaming_Rev_Requirements__c</fullName>
        <label>Other Gaming Rev Requirements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Municipality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Municipality</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Municipality__c.State_Record__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Municipality__c</referenceTo>
        <relationshipLabel>Related Municipalities</relationshipLabel>
        <relationshipName>Municipality</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Per_Capita_Income__c</fullName>
        <label>Per Capita Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <label>Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pour_License_Availability_Timeline_Days__c</fullName>
        <label>Pour License Availability Timeline(Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Contact__c</fullName>
        <label>Preferred Method of Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Redemption_Prizes_of_Gaming_Machines__c</fullName>
        <label>Redemption Prizes of Gaming Machines</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Retail Merchandise In-Store Credit</fullName>
                </value>
                <value>
                    <fullName>Pre-Paid Gift Cards</fullName>
                </value>
                <value>
                    <fullName>Non-Cash</fullName>
                    <isActive>false</isActive>
                    <label>Non-Cash</label>
                </value>
                <value>
                    <fullName>Retail Merchandise Credit with Restrictions</fullName>
                    <isActive>false</isActive>
                    <label>Retail Merchandise Credit with Restrictions</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regulator_of_Gaming_Machines__c</fullName>
        <label>Regulator of Gaming Machines</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Restriction_on_Prize__c</fullName>
        <label>Restriction on Prize</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Revenue_TTM__c</fullName>
        <formula>/*Hold_Per_Day_Total__r.HPD_Municipality_Accel_Revenue_Total__c*/
 Hold_Per_Day_Total__r.HPD_Municipality_TTM_Amount_Played__c -  Hold_Per_Day_Total__r.HPD_Municipality_TTM_Amount_Won__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue (TTM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Specific_Ordinance_Restrictions_Reqrmnts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Specific Ordinance Restrictions/Reqrmnts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this indicates that this is a state level record and a parent record to municipalities.</inlineHelpText>
        <label>State Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Share__c</fullName>
        <label>State Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>State_Split__c</fullName>
        <label>State Split</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Truck_Stop_Count__c</fullName>
        <description>Counts all Live locations existing in Salesforce for accounts of type Accel Account or Competitor Account. Uses the existence of a most recent HPD Record (within 75 days) on the account to ensure it&apos;s live. Looks for an Accel Establishment Type of &apos;Truck Stop&apos;  (Maintained by DLRS)</description>
        <inlineHelpText>Counts all Live locations existing in Salesforce for accounts of type Accel Account or Competitor Account. Uses the existence of a most recent HPD Record (within 75 days),  Looks for an Accel Establishment Type of &apos;Truck Stop&apos;</inlineHelpText>
        <label>Truck Stop Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Electronic_Gaming_Machines__c</fullName>
        <label>Type of Electronic Gaming Machines</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chance</fullName>
                </value>
                <value>
                    <fullName>Skill</fullName>
                </value>
                <value>
                    <fullName>Fishing</fullName>
                </value>
                <value>
                    <fullName>Pull-Tab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Skill__c</fullName>
        <label>Type of Skill</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bump</fullName>
                </value>
                <value>
                    <fullName>Nudge</fullName>
                </value>
                <value>
                    <fullName>Preview</fullName>
                </value>
                <value>
                    <fullName>Simon Says</fullName>
                </value>
                <value>
                    <fullName>Speedometer</fullName>
                </value>
                <value>
                    <fullName>Tic-Tac-Toe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VGT_Additional_Requirements__c</fullName>
        <label>VGT Additional Requirements</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VGT_Count__c</fullName>
        <description>Counts all Live locations existing in Salesforce for accounts of type Accel Account or Competitor Account. Uses the existence of a most recent HPD Record (within 75 days) on the account to ensure it&apos;s live. Uses the VGT Count from the Most Recent HPD Record.</description>
        <inlineHelpText>Counts all Live locations existing in Salesforce for accounts of type Accel Account or Competitor Account. Uses the existence of a most recent HPD Record (within 75 days) on the account to ensure it&apos;s live. Uses the VGT Count from the Most Recent HPD Rec.</inlineHelpText>
        <label>VGT Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VGT_Expiration_of_Permit__c</fullName>
        <label>VGT Expiration of Permit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VGT_Licensing_Requirement__c</fullName>
        <label>VGT Licensing Requirement</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VGT_Permit_Fee_Per_Machine__c</fullName>
        <label>VGT Permit Fee Per Machine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VGTs_Allowed_Licensed_Establishments__c</fullName>
        <label>VGTs Allowed - Licensed Establishments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>VGTs_Allowed</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>VGTs_Allowed_Truck_Stops__c</fullName>
        <label>VGTs Allowed - Truck Stops</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>VGTs_Allowed</valueSetName>
        </valueSet>
    </fields>
</CustomObject>